[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htpbe"
version = "0.1.0"
description = "Python client for the HTPBE PDF tamper/forgery detection API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "HTPBE", email = "hello@htpbe.tech" }]
keywords = ["pdf", "forensics", "tamper", "forgery", "fraud", "document", "api", "tamper-detection"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.25"]

[project.urls]
Homepage = "https://htpbe.tech"
Documentation = "https://htpbe.tech/api"
Source = "https://github.com/htpbe/python-client"

[tool.hatch.build.targets.wheel]
packages = ["htpbe"]
